Modify access rules

--- a/project.config
+++ b/project.config
@@ -3,3 +3,19 @@
 	description = BGP/PCEP protocol library
 [receive]
 	requireSignedOffBy = true
+[access "refs/*"]
+	owner = group ldap/gerrit-bgpcep-commiters
+	read = group Administrators
+	read = group Non-interactive bgpcep users
+	read = group ldap/gerrit-bgpcep-commiters
+	forgeAuthor = group ldap/gerrit-bgpcep-commiters
+[access "refs/for/refs/*"]
+	push = group ldap/gerrit-bgpcep-commiters
+[access "refs/heads/*"]
+	label-Code-Review = -2..+2 group ldap/gerrit-bgpcep-commiters
+	label-Code-Review = -1..+1 group Non-interactive bgpcep users
+	label-Verified = -1..+1 group Non-interactive bgpcep users
+	label-Verified = -1..+1 group ldap/gerrit-bgpcep-commiters
+	submit = group ldap/gerrit-bgpcep-commiters
+[access "refs/tags/*"]
+	pushTag = group ldap/gerrit-bgpcep-commiters
