--- a/project.config
+++ b/project.config
@@ -6,12 +6,16 @@
 [access "refs/*"]
 	owner = group ldap/gerrit-bgpcep-commiters
 	read = group Administrators
+	read = group Anonymous Users
 	read = group Non-interactive bgpcep users
+	read = group Registered Users
 	read = group ldap/gerrit-bgpcep-commiters
 	forgeAuthor = group ldap/gerrit-bgpcep-commiters
 [access "refs/for/refs/*"]
+	push = group Registered Users
 	push = group ldap/gerrit-bgpcep-commiters
 [access "refs/heads/*"]
+	label-Code-Review = -2..+2 group Registered Users
 	label-Code-Review = -2..+2 group ldap/gerrit-bgpcep-commiters
 	label-Code-Review = -1..+1 group Non-interactive bgpcep users
 	label-Verified = -1..+1 group Non-interactive bgpcep users
