Initial framework migration to netty.
Change-Id: Ic8ddba993d83b6535a96953cf41e9549227bc62d
Signed-off-by: Dana Kutenicsova <dkutenic@cisco.com>

--- a/bgp/rib-impl/pom.xml
+++ b/bgp/rib-impl/pom.xml
@@ -128,6 +128,8 @@
                             org.opendaylight.protocol.bgp.util,
                             org.opendaylight.protocol.util,
 							org.slf4j,
+							io.netty.channel, 
+							io.netty.util.concurrent,
 						</Import-Package>
 						<Export-Package>
 							org.opendaylight.protocol.bgp.rib.impl
