--- a/concepts/bin/pom.xml
+++ b/concepts/bin/pom.xml
@@ -50,6 +50,9 @@
                             com.google.common.net,
                             com.google.common.primitives,
                             com.google.guava;
+							javax.management,
+							org.slf4j.*,
+							io.netty.channel,
 						</Import-Package>
 						<Export-Package>
                             org.opendaylight.protocol.concepts,
