--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -23,6 +23,11 @@
 			<groupId>org.opendaylight.bgpcep</groupId>
 			<artifactId>util</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-all</artifactId>
+			<version>4.0.0.CR9</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
@@ -61,6 +66,7 @@
                             org.opendaylight.protocol.util,
 							javax.annotation,
 							javax.management,
+							io.netty.*,
 						</Import-Package>
 						<Export-Package>
 							org.opendaylight.protocol.framework,
