--- a/pcep/impl/pom.xml
+++ b/pcep/impl/pom.xml
@@ -98,6 +98,8 @@
 							org.opendaylight.protocol.pcep.tlv,
                             org.opendaylight.protocol.util,
 							org.slf4j,
+							io.netty.channel, 
+							io.netty.util.concurrent,
 						</Import-Package>
 						<Export-Package>
 							org.opendaylight.protocol.pcep.impl.*,
