--- a/bgp/testtool/pom.xml
+++ b/bgp/testtool/pom.xml
@@ -4,7 +4,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<parent>
-        <groupId>org.opendaylight.protocol</groupId>
+        <groupId>org.opendaylight.bgpcep</groupId>
         <artifactId>bgp-parent</artifactId>
         <version>1.0</version>
     </parent>
