--- a/mockito-configuration/pom.xml
+++ b/mockito-configuration/pom.xml
@@ -4,7 +4,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<parent>
-		<groupId>org.opendaylight.protocol</groupId>
+		<groupId>org.opendaylight.bgpcep</groupId>
 		<artifactId>protocol-parent</artifactId>
 		<version>0.1</version>
 	</parent>
