--- a/pcep/pom.xml
+++ b/pcep/pom.xml
@@ -2,7 +2,7 @@
 <!-- vi: set et smarttab sw=4 tabstop=4: --><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<parent>
-		<groupId>org.opendaylight.protocol</groupId>
+		<groupId>org.opendaylight.bgpcep</groupId>
 		<artifactId>protocol-parent</artifactId>
 		<version>0.1</version>
 	</parent>
