--- a/bgp/rib-mock/pom.xml
+++ b/bgp/rib-mock/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.opendaylight.bgpcep</groupId>
 		<artifactId>bgp-parent</artifactId>
-		<version>1.0</version>
+		<version>0.1.0-SNAPSHOT</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
@@ -22,22 +22,22 @@
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>bgp-rib-impl</artifactId>
-			<version>1.0</version>
+            <version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>util</artifactId>
-			<version>1.0</version>
+            <version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>bgp-parser-impl</artifactId>
-			<version>1.0</version>
+            <version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>mockito-configuration</artifactId>
-			<version>1.0</version>
+            <version>${project.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
