--- a/bgp/util/pom.xml
+++ b/bgp/util/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.opendaylight.bgpcep</groupId>
 		<artifactId>bgp-parent</artifactId>
-		<version>1.0</version>
+		<version>0.1.0-SNAPSHOT</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
@@ -22,22 +22,22 @@
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>bgp-parser-api</artifactId>
-			<version>1.0</version>
+            <version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>bgp-linkstate</artifactId>
-			<version>1.0</version>
+            <version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>bgp-concepts</artifactId>
-			<version>1.0</version>
+            <version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>${guava.version}</version>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.findbugs</groupId>
