--- a/concepts/pom.xml
+++ b/concepts/pom.xml
@@ -6,14 +6,13 @@
 	<parent>
 		<groupId>org.opendaylight.bgpcep</groupId>
 		<artifactId>protocol-parent</artifactId>
-		<version>0.1</version>
+		<version>0.1.0-SNAPSHOT</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>concepts</artifactId>
 	<description>Basic protocol concepts</description>
 	<packaging>bundle</packaging>
-	<version>1.0</version>
 	<name>${project.artifactId}</name>
 	<prerequisites>
 		<maven>3.0.4</maven>
@@ -23,7 +22,7 @@
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>util</artifactId>
-			<version>1.0</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.findbugs</groupId>
