--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -6,20 +6,24 @@
 	<parent>
 		<groupId>org.opendaylight.bgpcep</groupId>
 		<artifactId>protocol-parent</artifactId>
-		<version>0.1</version>
+		<version>0.1.0-SNAPSHOT</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>framework</artifactId>
 	<description>Common protocol framework</description>
 	<packaging>bundle</packaging>
-	<version>1.0</version>
 	<name>${project.artifactId}</name>
 	<prerequisites>
 		<maven>3.0.4</maven>
 	</prerequisites>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.opendaylight.bgpcep</groupId>
+			<artifactId>util</artifactId>
+            <version>${project.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
@@ -32,13 +36,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.opendaylight.bgpcep</groupId>
-			<artifactId>util</artifactId>
-			<version>1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.opendaylight.bgpcep</groupId>
 			<artifactId>mockito-configuration</artifactId>
-			<version>1.0</version>
+            <version>${project.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
