--- a/mockito-configuration/pom.xml
+++ b/mockito-configuration/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.opendaylight.bgpcep</groupId>
 		<artifactId>protocol-parent</artifactId>
-		<version>0.1</version>
+		<version>0.1.0-SNAPSHOT</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
@@ -14,7 +14,6 @@
 	<description>Default mockito configuration</description>
 	<packaging>jar</packaging> <!-- not needed in OSGi -->
     <name>${project.artifactId}</name>
-    <version>1.0</version>
 	<prerequisites>
 		<maven>3.0.4</maven>
 	</prerequisites>
