--- a/pcep/api/pom.xml
+++ b/pcep/api/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.opendaylight.bgpcep</groupId>
 		<artifactId>pcep-parent</artifactId>
-		<version>1.0</version>
+		<version>0.1.0-SNAPSHOT</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
@@ -22,12 +22,12 @@
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>framework</artifactId>
-			<version>1.0</version>
+            <version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>concepts</artifactId>
-			<version>1.0</version>
+            <version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -37,7 +37,7 @@
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>mockito-configuration</artifactId>
-			<version>1.0</version>
+            <version>${project.version}</version>
 			<scope>test</scope>
         </dependency>
 
