--- a/pcep/pom.xml
+++ b/pcep/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.opendaylight.bgpcep</groupId>
 		<artifactId>protocol-parent</artifactId>
-		<version>0.1</version>
+		<version>0.1.0-SNAPSHOT</version>
 	</parent>
 	<prerequisites>
 		<maven>3.0.4</maven>
@@ -14,7 +14,6 @@
 	<artifactId>pcep-parent</artifactId>
 	<description>PCEP protocol parent</description>
 	<packaging>pom</packaging>
-	<version>1.0</version>
 	<name>${project.artifactId}</name>
 	
 	<modules>
