--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,9 @@
 	<groupId>org.opendaylight.bgpcep</groupId>
 	<artifactId>protocol-parent</artifactId>
 	<description>OpenDaylight BGP+PCEP protocol parent</description>
-	<version>0.1</version>
+	<version>0.1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<commonscodec.version>1.7</commonscodec.version>
@@ -69,17 +70,20 @@
 	</reporting>
 
 	<distributionManagement>
-		<site>
-			<id>${project.artifactId}</id>
-			<name>NPS-APPLICATION Project site</name>
-			<url>${basedir}/target/site/${project.artifactId}</url>
-		</site>
-		<!-- mock repository to allow deploy phase without real deployment -->
+		<!-- OpenDayLight Released artifact -->
 		<repository>
-			<id>targetRepo</id>
-			<name>Target folder as mock repository</name>
-			<url>file://${basedir}/target/deploy</url>
+			<id>opendaylight-release</id>
+			<url>${nexusproxy}/repositories/opendaylight.release/</url>
 		</repository>
+		<!-- OpenDayLight Snapshot artifact -->
+		<snapshotRepository>
+			<id>opendaylight-snapshot</id>
+			<url>${nexusproxy}/repositories/opendaylight.snapshot/</url>
+		</snapshotRepository>
+		<site>
+			<id>${project.artifactId}-site</id>
+			<url>./</url>
+		</site>
 	</distributionManagement>
 
 	<build>
