--- a/util/pom.xml
+++ b/util/pom.xml
@@ -6,14 +6,13 @@
 	<parent>
 		<groupId>org.opendaylight.bgpcep</groupId>
 		<artifactId>protocol-parent</artifactId>
-		<version>0.1</version>
+		<version>0.1.0-SNAPSHOT</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>util</artifactId>
 	<description>Protocol utilities</description>
 	<packaging>bundle</packaging>
-	<version>1.0</version>
 	<name>${project.artifactId}</name>
 	<prerequisites>
 		<maven>3.0.4</maven>
