--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,12 @@
 		<java.version.target>1.7</java.version.target>
 		<junit.version>4.10</junit.version>
 		<logback.version>1.0.7</logback.version>
-		<maven.bundle.version>2.3.7</maven.bundle.version>
-		<maven.compiler.version>2.5.1</maven.compiler.version>
+		<maven.bundle.version>2.4.0</maven.bundle.version>
+		<maven.compiler.version>3.1</maven.compiler.version>
+		<maven.shade.version>2.1</maven.shade.version>
 		<nexusproxy>http://nexus.opendaylight.org/content</nexusproxy>
 		<slf4j.version>1.7.2</slf4j.version>
-		<surefire.version>2.14.1</surefire.version>
+		<surefire.version>2.15</surefire.version>
 	</properties>
 	<prerequisites>
 		<maven>3.0.4</maven>
@@ -59,12 +60,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.8.1</version>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-antrun-plugin</artifactId>
-				<version>${maven.antrun.version}</version>
+				<version>2.9.1</version>
 			</plugin>
 		</plugins>
 	</reporting>
