Fix dependency deficiencies
Removes unused declared dependecies and adds used dependencies.

Change-Id: Ia7d7de00e463944de167d3b863a0da9ef54b4069
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/bgp/parser-api/pom.xml
+++ b/bgp/parser-api/pom.xml
@@ -26,6 +26,11 @@
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
+			<artifactId>util</artifactId>
+            <version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>framework</artifactId>
             <version>${project.version}</version>
 		</dependency>
@@ -33,6 +38,16 @@
 			<groupId>${project.groupId}</groupId>
 			<artifactId>bgp-linkstate</artifactId>
             <version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>bgp-concepts</artifactId>
+            <version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>${guava.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
