--- a/bgp/testtool/pom.xml
+++ b/bgp/testtool/pom.xml
@@ -31,6 +31,16 @@
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
+			<artifactId>bgp-concepts</artifactId>
+            <version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>bgp-parser-api</artifactId>
+            <version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>bgp-parser-impl</artifactId>
             <version>${project.version}</version>
 		</dependency>
@@ -38,6 +48,11 @@
 			<groupId>${project.groupId}</groupId>
 			<artifactId>bgp-rib-impl</artifactId>
             <version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
 		</dependency>
 	</dependencies>
 
