--- a/bgp/util/pom.xml
+++ b/bgp/util/pom.xml
@@ -21,6 +21,16 @@
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
+			<artifactId>concepts</artifactId>
+            <version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>util</artifactId>
+            <version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>bgp-parser-api</artifactId>
             <version>${project.version}</version>
 		</dependency>
@@ -33,6 +43,11 @@
 			<groupId>${project.groupId}</groupId>
 			<artifactId>bgp-concepts</artifactId>
             <version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>${commonscodec.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
