--- a/concepts/pom.xml
+++ b/concepts/pom.xml
@@ -29,6 +29,11 @@
 			<artifactId>jsr305</artifactId>
 			<version>2.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>${guava.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
