--- a/mockito-configuration/pom.xml
+++ b/mockito-configuration/pom.xml
@@ -23,7 +23,7 @@
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>1.9.5</version>
+            <version>${mockito.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
