Modified project settings

--- a/project.config
+++ b/project.config
@@ -3,6 +3,7 @@
 	description = BGP/PCEP protocol library
 [receive]
 	requireSignedOffBy = true
+	requireChangeId = true
 [access "refs/*"]
 	owner = group ldap/gerrit-bgpcep-commiters
 	read = group Administrators
