--- a/pcep/api/pom.xml
+++ b/pcep/api/pom.xml
@@ -54,30 +54,35 @@
         <!--
             FIXME: this is in support of the generated code. This should not
                    be here, but the plugin should bring it in.
-        <dependency>
-            <groupId>org.opendaylight.controller</groupId>
-            <artifactId>yang-binding</artifactId>
-            <version>0.5.4-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.opendaylight.controller</groupId>
-            <artifactId>yang-common</artifactId>
-            <version>0.5.4-SNAPSHOT</version>
-        </dependency>
         -->
+        <dependency>
+            <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>yang-binding</artifactId>
+            <version>0.5.7-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>yang-common</artifactId>
+            <version>0.5.7-SNAPSHOT</version>
+        </dependency>
 
         <!--
              FIXME: these are IETF models which are pre-generated in SAL infra.
                     This should not be here, but rather should somehow be
                     discovered by the plugin.
+        -->
         <dependency>
-            <groupId>org.opendaylight.controller</groupId>
+            <groupId>org.opendaylight.yangtools.model</groupId>
             <artifactId>ietf-inet-types</artifactId>
             <version>2010.09.24-SNAPSHOT</version>
         </dependency>
-        -->
+        <dependency>
+            <groupId>org.opendaylight.yangtools.model</groupId>
+            <artifactId>ietf-topology</artifactId>
+            <version>2013.07.12-SNAPSHOT</version>
+        </dependency>
         <!--dependency>
-            <groupId>org.opendaylight.controller</groupId>
+            <groupId>org.opendaylight.controller.model</groupId>
             <artifactId>ietf-yang-types</artifactId>
             <version>2010.09.24-SNAPSHOT</version>
         </dependency-->
@@ -85,70 +90,68 @@
 
 	<build>
         <plugins>
-            <!-- Disabled until the plugin actually works
-            <plugin>
-                <groupId>org.opendaylight.controller</groupId>
-                <artifactId>yang-maven-plugin</artifactId>
-                <version>0.5.4-SNAPSHOT</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>generate-sources</goal>
-                        </goals>
-                        <configuration>
-                            <yangFilesRootDir>src/main/yang</yangFilesRootDir>
-                            <codeGenerators>
-                                <generator>
-                                    <codeGeneratorClass>
-                                        org.opendaylight.controller.maven.sal.api.gen.plugin.CodeGeneratorImpl
-                                    </codeGeneratorClass>
-                                    <outputBaseDir>
-                                        target/generated-sources/sal
-                                    </outputBaseDir>
-                                </generator>
-                            </codeGenerators>
-                            <inspectDependencies>true</inspectDependencies>
-                        </configuration>
-                    </execution>
-                </executions>
 
-                <dependencies>
-                    <dependency>
-                        <groupId>org.opendaylight.controller</groupId>
-                        <artifactId>maven-sal-api-gen-plugin</artifactId>
-                        <version>0.5.4-SNAPSHOT</version>
-                        <type>jar</type>
-                    </dependency>
-                </dependencies>
-            </plugin>
-            -->
-			<plugin>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-bundle-plugin</artifactId>
-				<version>${maven.bundle.version}</version>
-				<extensions>true</extensions>
-				<configuration>
-					<instructions>
-						<Bundle-Name>${project.groupId}.${project.artifactId}</Bundle-Name>
-						<Export-Package>
-							org.opendaylight.protocol.pcep,
-							org.opendaylight.protocol.pcep.concepts,
-							org.opendaylight.protocol.pcep.message,
-							org.opendaylight.protocol.pcep.object,
-							org.opendaylight.protocol.pcep.subobject,
-							org.opendaylight.protocol.pcep.tlv,
-						</Export-Package>
-						<Import-Package>
-							org.opendaylight.protocol.concepts,
-                            org.opendaylight.protocol.framework,
-                            org.opendaylight.protocol.util,
-							com.google.common.*,
-							javax.management,
-							org.slf4j.*
-						</Import-Package>
-					</instructions>
-				</configuration>
-			</plugin>
+           <plugin>
+               <groupId>org.opendaylight.yangtools</groupId>
+               <artifactId>yang-maven-plugin</artifactId>
+               <version>0.5.7-SNAPSHOT</version>
+               <executions>
+                   <execution>
+                       <goals>
+                           <goal>generate-sources</goal>
+                       </goals>
+                       <configuration>
+                           <yangFilesRootDir>src/main/yang</yangFilesRootDir>
+                           <codeGenerators>
+                               <generator>
+                                   <codeGeneratorClass>
+                                       org.opendaylight.yangtools.maven.sal.api.gen.plugin.CodeGeneratorImpl
+                                   </codeGeneratorClass>
+                                   <outputBaseDir>
+                                       target/generated-sources/sal
+                                   </outputBaseDir>
+                               </generator>
+                           </codeGenerators>
+                           <inspectDependencies>true</inspectDependencies>
+                       </configuration>
+                   </execution>
+               </executions>
+               <dependencies>
+                   <dependency>
+                       <groupId>org.opendaylight.yangtools</groupId>
+                       <artifactId>maven-sal-api-gen-plugin</artifactId>
+                       <version>0.5.7-SNAPSHOT</version>
+                       <type>jar</type>
+                   </dependency>
+               </dependencies>
+           </plugin>
+           <plugin>
+               <groupId>org.apache.felix</groupId>
+               <artifactId>maven-bundle-plugin</artifactId>
+               <version>${maven.bundle.version}</version>
+               <extensions>true</extensions>
+               <configuration>
+                   <instructions>
+                       <Bundle-Name>${project.groupId}.${project.artifactId}</Bundle-Name>
+                       <Export-Package>
+                           org.opendaylight.protocol.pcep,
+                           org.opendaylight.protocol.pcep.concepts,
+                           org.opendaylight.protocol.pcep.message,
+                           org.opendaylight.protocol.pcep.object,
+                           org.opendaylight.protocol.pcep.subobject,
+                           org.opendaylight.protocol.pcep.tlv,
+                       </Export-Package>
+                       <Import-Package>
+                           org.opendaylight.protocol.concepts,
+                           org.opendaylight.protocol.framework,
+                           org.opendaylight.protocol.util,
+                           com.google.common.*,
+                           javax.management,
+                           org.slf4j.*
+                       </Import-Package>
+                   </instructions>
+               </configuration>
+           </plugin>
 		</plugins>
 	</build>
 
