--- a/pcep/testtool/pom.xml
+++ b/pcep/testtool/pom.xml
@@ -54,6 +54,11 @@
 			<artifactId>groovy-all</artifactId>
 			<version>2.0.2</version>
 		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${logback.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
