--- a/pcep/testtool/pom.xml
+++ b/pcep/testtool/pom.xml
@@ -48,6 +48,7 @@
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<version>${logback.version}</version>
+			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
 
