BUG-58: add ReconnectStrategy concept
This adss the ReconnectStrategy concept, plus a few key implementations.

Change-Id: Ieda27db21ba874aa89cfc380d33556c6ac493ab7
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -35,6 +35,11 @@
 			<version>${guava.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.google.code.findbugs</groupId>
+			<artifactId>jsr305</artifactId>
+			<version>2.0.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>${slf4j.version}</version>
