Fix yangtools plugin integration with eclipse
Change-Id: I93422aa56c8f0872dd52ea6b779c71cfa3a1aa0a
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/pom.xml
+++ b/pom.xml
@@ -165,7 +165,7 @@
 								</pluginExecution>
                                 <pluginExecution>
                                     <pluginExecutionFilter>
-                                        <groupId>org.opendaylight.controller</groupId>
+                                        <groupId>org.opendaylight.yangtools</groupId>
                                         <artifactId>yang-maven-plugin</artifactId>
                                         <versionRange>[0.5,)</versionRange>
                                         <goals>
