--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -27,7 +27,7 @@
         <dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-all</artifactId>
-			<version>4.0.6.Final</version>
+            <version>${netty.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
