--- a/bgp/parser-api/pom.xml
+++ b/bgp/parser-api/pom.xml
@@ -62,12 +62,12 @@
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>yang-binding</artifactId>
-            <version>0.5.7-SNAPSHOT</version>
+            <version>${yangtools.version}</version>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>yang-common</artifactId>
-            <version>0.5.7-SNAPSHOT</version>
+            <version>${yangtools.version}</version>
         </dependency>
 
         <!--
@@ -92,7 +92,7 @@
            <plugin>
                <groupId>org.opendaylight.yangtools</groupId>
                <artifactId>yang-maven-plugin</artifactId>
-               <version>0.5.7-SNAPSHOT</version>
+               <version>${yangtools.version}</version>
                <executions>
                    <execution>
                        <goals>
@@ -118,7 +118,7 @@
                    <dependency>
                        <groupId>org.opendaylight.yangtools</groupId>
                        <artifactId>maven-sal-api-gen-plugin</artifactId>
-                       <version>0.5.7-SNAPSHOT</version>
+                       <version>${yangtools.version}</version>
                        <type>jar</type>
                    </dependency>
                </dependencies>
