Make sure we export generated APIs
Change-Id: I1ce3884d58bbf511d4e24074a7945da67d3489c4
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/bgp/concepts/pom.xml
+++ b/bgp/concepts/pom.xml
@@ -106,7 +106,8 @@
 					<instructions>
 						<Bundle-Name>${project.groupId}.${project.artifactId}</Bundle-Name>
 						<Export-Package>
-							org.opendaylight.protocol.bgp.concepts
+                            org.opendaylight.protocol.bgp.concepts,
+                            org/opendaylight.yang.gen.*
 						</Export-Package>
 						<Import-Package>
 							com.google.common.base,
