Modify access rules

--- a/project.config
+++ b/project.config
@@ -22,5 +22,15 @@
 	label-Verified = -1..+1 group Non-interactive bgpcep users
 	label-Verified = -1..+1 group ldap/gerrit-bgpcep-commiters
 	submit = group ldap/gerrit-bgpcep-commiters
+	create = group Non-interactive bgpcep users
+	forgeAuthor = group Non-interactive bgpcep users
+	forgeCommitter = group Non-interactive bgpcep users
+	push = group Non-interactive bgpcep users
+	pushMerge = group Non-interactive bgpcep users
 [access "refs/tags/*"]
-	pushTag = group ldap/gerrit-bgpcep-commiters
+	pushTag = group Non-interactive bgpcep users
+	pushTag = +force group ldap/gerrit-bgpcep-commiters
+	create = group ldap/gerrit-bgpcep-commiters
+	forgeCommitter = group Non-interactive bgpcep users
+	push = group Non-interactive bgpcep users
+	push = +force group ldap/gerrit-bgpcep-commiters
