Created own version for code generator. Updated to 0.5.8.1.
Change-Id: I2d4833c3ecd6056ee3c836d4c6e70f6cc2f602f4
Signed-off-by: Dana Kutenicsova <dkutenic@cisco.com>

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
 		<surefire.version>2.15</surefire.version>
 
 		<yangtools.version>0.5.8-SNAPSHOT</yangtools.version>
+		<code.generator.version>0.5.8.1</code.generator.version>
 		<ietf.types.version>2010.09.24-SNAPSHOT</ietf.types.version>
 	</properties>
 	<prerequisites>
