--- a/bgp/rib-api/pom.xml
+++ b/bgp/rib-api/pom.xml
@@ -77,7 +77,7 @@
                     <dependency>
                         <groupId>org.opendaylight.yangtools</groupId>
                         <artifactId>maven-sal-api-gen-plugin</artifactId>
-                        <version>${yangtools.version}</version>
+                        <version>${code.generator.version}</version>
                         <type>jar</type>
                     </dependency>
                 </dependencies>
