BUG-46: preliminary switch to MD-SAL
Change-Id: I6ede4d6eef457f0fb6e59ce1325a839997daf82f
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/bgp/pom.xml
+++ b/bgp/pom.xml
@@ -23,6 +23,7 @@
         <module>parser-impl</module>
         <module>parser-mock</module>
         <module>rib-api</module>
+        <module>rib-spi</module>
         <module>rib-impl</module>
         <module>testtool</module>
         <module>rib-mock</module>
