BUG-99: introduce OSGi integration test
Change-Id: I08751db7d49558dd4e50a383ad69530d527b450c
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
 		<module>bgp</module>
 		<module>concepts</module>
 		<module>framework</module>
+		<module>integration-tests</module>
 		<module>mockito-configuration</module>
 		<module>pcep</module>
 		<module>util</module>
