BUG-99: fix OSGi errors
Change-Id: I44faddad85b5cc9dab94d59bad933c1c824f029d
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/bgp/concepts/pom.xml
+++ b/bgp/concepts/pom.xml
@@ -102,7 +102,7 @@
 						<Bundle-Name>${project.groupId}.${project.artifactId}</Bundle-Name>
 						<Export-Package>
                             org.opendaylight.protocol.bgp.concepts,
-                            org/opendaylight.yang.gen.*
+                            org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.types.rev130919.*,
 						</Export-Package>
 						<Import-Package>
 							com.google.common.base,
