--- a/bgp/linkstate/pom.xml
+++ b/bgp/linkstate/pom.xml
@@ -96,7 +96,7 @@
 					<instructions>
 						<Bundle-Name>${project.groupId}.${project.artifactId}</Bundle-Name>
 						<Export-Package>
-							org.opendaylight.yang.gen.*
+                            org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.linkstate.rev130918.*,
 						</Export-Package>
 					</instructions>
 				</configuration>
