--- a/bgp/parser-api/pom.xml
+++ b/bgp/parser-api/pom.xml
@@ -52,7 +52,7 @@
         <dependency>
             <groupId>org.opendaylight.yangtools.model</groupId>
             <artifactId>ietf-inet-types</artifactId>
-            <version>2010.09.24-SNAPSHOT</version>
+            <version>${ietf.types.version}</version>
         </dependency>
 	</dependencies>
 
@@ -105,7 +105,6 @@
 							com.google.common.collect,
 							com.google.common.primitives,
 							org.opendaylight.protocol.concepts,
-							org.opendaylight.protocol.concepts,
 							org.opendaylight.protocol.framework,
 							org.opendaylight.protocol.util,
 							org.slf4j,
@@ -113,6 +112,8 @@
 						<Export-Package>
                             org.opendaylight.protocol.bgp.parser,
                             org.opendaylight.protocol.bgp.parser.message,
+                            org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.message.rev130918.*,
+                            org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.multiprotocol.rev130918.*,
 						</Export-Package>
 					</instructions>
 				</configuration>
