--- a/bgp/parser-impl/pom.xml
+++ b/bgp/parser-impl/pom.xml
@@ -98,25 +98,20 @@
 				<configuration>
 					<instructions>
 						<Bundle-Name>${project.groupId}.${project.artifactId}</Bundle-Name>
-						<Private-Package>
-							javax.annotation.*,
-							org.opendaylight.protocol.bgp.parser.impl.*
-						</Private-Package>
 						<Import-Package>
 							org.opendaylight.protocol.bgp.parser.message,
-							org.opendaylight.protocol.bgp.parser.parameter,
 							org.opendaylight.protocol.bgp.concepts,
-							org.opendaylight.protocol.bgp.linkstate,
                             org.opendaylight.protocol.bgp.parser,
                             org.opendaylight.protocol.bgp.util,
 							org.opendaylight.protocol.concepts,
 							org.opendaylight.protocol.framework,
                             org.opendaylight.protocol.util,
+                            org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.linkstate.rev130918.*,
 							com.google.common.*,
 							org.slf4j,
-							org.apache.commons.lang
 						</Import-Package>
 						<Export-Package>
+							org.opendaylight.protocol.bgp.parser.impl.*
 						</Export-Package>
 					</instructions>
 				</configuration>
