--- a/concepts/pom.xml
+++ b/concepts/pom.xml
@@ -114,6 +114,9 @@
 						</Import-Package>
 						<Export-Package>
                             org.opendaylight.protocol.concepts,
+                            org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.iana.rev130816.*,
+                            org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.ieee754.rev130819.*,
+                            org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.nps.concepts.rev130930.*,
 						</Export-Package>
 					</instructions>
 				</configuration>
