BUG-47: introduce SPI component
Change-Id: Iccf495f5ef390f0e67ee75e04f31a5904ab60fca
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/pcep/impl/pom.xml
+++ b/pcep/impl/pom.xml
@@ -26,6 +26,11 @@
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
+			<artifactId>pcep-spi</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>framework</artifactId>
 			<version>${project.version}</version>
 		</dependency>
