Fixed bundle configuration of bgp artifacts.
Removed wrong import package and added new export package instructions.

Change-Id: I198d45a7ffb87f9f33ddad59af8ec5ec4b07c180
Signed-off-by: Maros Marsalek <mmarsale@cisco.com>

--- a/bgp/parser-api/pom.xml
+++ b/bgp/parser-api/pom.xml
@@ -133,7 +133,6 @@
 						<Bundle-Name>${project.groupId}.${project.artifactId}</Bundle-Name>
 						<Import-Package>
 							org.opendaylight.protocol.bgp.concepts, 
-							org.opendaylight.protocol.concepts,
 							org.opendaylight.protocol.framework,
 							org.opendaylight.protocol.concepts, 
 							org.opendaylight.protocol.util,
@@ -141,11 +140,10 @@
 							com.google.common.collect, 
 							org.opendaylight.protocol.bgp.linkstate,
 							com.google.common.base,
-							com.google.guava,
 							org.slf4j,
 						</Import-Package>
 						<Export-Package>
-							org.opendaylight.protocol.bgp.parser,
+							org.opendaylight.protocol.bgp.parser.*,
 						</Export-Package>
 					</instructions>
 				</configuration>
