--- a/bgp/rib-impl/pom.xml
+++ b/bgp/rib-impl/pom.xml
@@ -129,10 +129,13 @@
                             org.opendaylight.protocol.util,
 							org.slf4j,
 							io.netty.channel, 
+							io.netty.channel.socket,
 							io.netty.util.concurrent,
+							io.netty.util,
+							io.netty.handler.codec,
 						</Import-Package>
 						<Export-Package>
-							org.opendaylight.protocol.bgp.rib.impl
+							org.opendaylight.protocol.bgp.rib.impl.*
 						</Export-Package>
 					</instructions>
 				</configuration>
