BUG-48: introduce topology and programming models
This drops in a couple new components, which are necessary
for providing topology export and tunnel programming.

Change-Id: If15db08635cab91e72242830f0067258b2311b83
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,8 @@
 		<module>integration-tests</module>
 		<module>mockito-configuration</module>
 		<module>pcep</module>
+		<module>programming</module>
+		<module>topology</module>
 		<module>util</module>
 	</modules>
 
