BUG-47 : removed PCEPMessage interface, switched to generated Message.
Change-Id: Ida381612f5b71d06a4ba118292786573307c146a
Signed-off-by: Dana Kutenicsova <dkutenic@cisco.com>

--- a/pcep/api/pom.xml
+++ b/pcep/api/pom.xml
@@ -141,6 +141,7 @@
                            org.opendaylight.protocol.pcep.subobject,
                            org.opendaylight.protocol.pcep.tlv,
                            org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.message.rev131007.*,
+                           org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.rsvp.rev130820.*,
                            org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.types.rev131005.*,
                        </Export-Package>
                        <Import-Package>
