Define bgp-parser-spi for parser extensibility
Change-Id: I0bea5c3d20f9b848895100c7d65dcf4a2feb46d6
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/bgp/pom.xml
+++ b/bgp/pom.xml
@@ -20,6 +20,7 @@
 		<module>concepts</module>
 		<module>linkstate</module>
         <module>parser-api</module>
+        <module>parser-spi</module>
         <module>parser-impl</module>
         <module>parser-mock</module>
         <module>rib-api</module>
