--- a/bgp/parser-spi/pom.xml
+++ b/bgp/parser-spi/pom.xml
@@ -10,8 +10,8 @@
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>bgp-rib-mock</artifactId>
-	<description>BGP Update Mock Implementation</description>
+	<artifactId>bgp-parser-spi</artifactId>
+	<description>BGP Parser SPI</description>
 	<packaging>bundle</packaging>
 	<name>${project.artifactId}</name>
 	<prerequisites>
@@ -45,31 +45,15 @@
             <version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>bgp-parser-impl</artifactId>
-            <version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>bgp-rib-impl</artifactId>
-            <version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.code.findbugs</groupId>
-			<artifactId>jsr305</artifactId>
-			<version>2.0.1</version>
-		</dependency>
-		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>${guava.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>mockito-configuration</artifactId>
-            <version>${project.version}</version>
-			<scope>test</scope>
-		</dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
+        </dependency>
 	</dependencies>
 
 	<build>
@@ -83,33 +67,10 @@
 					<instructions>
 						<Bundle-Name>${project.groupId}.${project.artifactId}</Bundle-Name>
 						<Export-Package>
-							org.opendaylight.protocol.bgp.rib.mock,
+                            org.opendaylight.protocol.bgp.parser.spi,
 						</Export-Package>
-						<Import-Package>
-							com.google.common.*,
-							org.opendaylight.protocol.bgp.parser,
-                            org.opendaylight.protocol.bgp.parser.impl,
-                            org.opendaylight.protocol.bgp.rib.impl,
-							org.opendaylight.protocol.concepts,
-							org.opendaylight.protocol.framework,
-                            org.opendaylight.protocol.util,
-							org.slf4j,
-						</Import-Package>
 					</instructions>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.4</version>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>test-jar</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 		</plugins>
 	</build>
@@ -117,7 +78,7 @@
 	<distributionManagement>
 		<site>
 			<id>${project.artifactId}</id>
-			<name>BGP-UPDATE-MOCK Module site</name>
+			<name>BGP-PARSER-SPI Module site</name>
 			<url>${basedir}/target/site/${project.artifactId}</url>
 		</site>
 	</distributionManagement>
